UAT fixes [#184997530]
